# scene_agent

./: .gitignore  Dockerfile  README.md  environment_new_agent.yml  install.sh  test_read.py
breadth_agent/src/: pyproject.toml  test_cam_poses.py  test_features.py  test_mosaic.py  test_sfm.py  test_sfm_v2.py
breadth_agent/src/agent/: __sfmagent.py  autosfm.py  baseclass_agents.py  code_refinement_agent.py  coding_agent.py  programmer_agent.py  prompt_agent.py  sfmagent.py  test.py  test1.py  test_Co3d.py  test_DTU.py  test_DTU2.py  test_DTU3.py  test_DTU4.py  test_DTU5.py  test_ETH.py  test_ETH2.py  test_TT.py
breadth_agent/src/agent/core/: compiler.py  debugger.py  generator.py  imageanalyzer.py  logger.py  optimizer.py  promptenhancer.py
breadth_agent/src/agent/generated_code/: gen_code.py  gen_code_DTU1.py  gen_code_DTU2.py  gen_code_ETH1.py  gen_procedure.txt  key_facts_during_gen.txt  refined_gen_code.py  refined_gen_code_DTU1.py  sfm_log.txt  temp_gen_code.py  time_log.txt
breadth_agent/src/agent/old_code/: baseclass_agents.py  code_generator.py  code_refinement_agent.py  programmer_agent.py  (+1 more)
breadth_agent/src/agent_utils/: contextbuilding.py
breadth_agent/src/agents/: code_generator.py
breadth_agent/src/modules/: baseclass.py  cameramanager.py  camerapose.py  featurematching.py  features.py  geometry.py  optimization.py  scenereconstruction.py  visualize.py
breadth_agent/src/tests/: test_cam_poses.py  test_dense_recon.py  test_features.py  test_image_proc.py  test_mosaic.py  test_optimizer.py  test_sfm.py  test_string_removal_func.py  test_vggt.py
(+153 files in other folders)
