[project]
authors = [{name = "Anthony Quiroga", email = "aquiroga@ucsd.edu"}]
dependencies = [
    "numpy==2.1.3",
    "Pillow",
    "huggingface_hub",
    "einops",
    "safetensors",
    "opencv-python",
]
name = "modules"
requires-python = ">= 3.10"
version = "0.0.1"

[project.optional-dependencies]
gpu = ["torch[cuda]"]

# Using setuptools as the build backend
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# setuptools configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]